--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@vuepress/plugin-search": "^2.0.0-beta.46",
-    "vuepress": "^2.0.0-beta.46"
+    "@vuepress/plugin-register-components": "^2.0.0-beta.49",
+    "@vuepress/plugin-search": "^2.0.0-beta.49",
+    "vuepress": "^2.0.0-beta.49",
+    "vuepress-plugin-demoblock-plus": "^1.6.0"
   }
 }
